Fixed the last bugs and made it a bit neater. Fixed the crash - referencing MainActivity Context Removed most of the redundance

--- a/FloatyMon/FloatyMon.csproj
+++ b/FloatyMon/FloatyMon.csproj
@@ -68,10 +68,11 @@
     <Compile Include="Source\Extras\DialogBox.cs" />
     <Compile Include="Source\Services\CallingService.cs" />
     <Compile Include="Source\Services\CallingServiceServiceConnection.cs" />
-    <Compile Include="Source\Monitors\JonCallMonitor.cs" />
+    <Compile Include="Source\Monitors\ActiveCallMonitor.cs" />
     <Compile Include="Source\Constants.cs" />
     <Compile Include="Source\Extras\LocalIntentHelper.cs" />
     <Compile Include="MainActivityServiceManager.cs" />
+    <Compile Include="Source\Monitors\PhoneActivityListener.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
