--- a/FloatyMon/Properties/AndroidManifest.xml
+++ b/FloatyMon/Properties/AndroidManifest.xml
@@ -11,4 +11,6 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_CALL_LOG" />
+	<uses-permission android:name="android.permission.PERSISTENT_ACTIVITY" />
+	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 </manifest>
