--- a/FloatyMon/Properties/AndroidManifest.xml
+++ b/FloatyMon/Properties/AndroidManifest.xml
@@ -13,4 +13,5 @@
 	<uses-permission android:name="android.permission.READ_CALL_LOG" />
 	<uses-permission android:name="android.permission.PERSISTENT_ACTIVITY" />
 	<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
